--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: DLI Atlantic
 ##Markdown processor
 markdown: kramdown
 ##syntax highlighter. change it to pygments
-highlighter: pygments
+highlighter: rouge
 
 ##define base_url for valid usage in sitemap.xml and robots.txt
 base_url:  http://dli-atlantic.github.io
